k8s-yaml/yaml/cfg-envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-cfg
data:
  envoy.conf: |
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - address:
      socket_address: 
        protocol: TCP
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: default
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: default-cluster
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: default-cluster
    connect_timeout: 15s
    type: strict_dns
    http_protocol_options: {}
    load_assignment:
      cluster_name: k8s-service-apache
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: svc-apache.default.svc.cluster.local
                port_value: 80
