k8s-yaml/yaml/depl-envoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-deployment
  labels:
    app: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.22.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: envoy-config-file
          mountPath: "/etc/envoy/envoy.yaml"
          subPath: "envoy.yaml"
      volumes:
      - name: envoy-config-file
        configMap:
          name: envoy-cfg
