k8s-yaml/yaml/depl-nginx-podAntiAffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-paa
  labels:
    app: nginx-paa
spec:
  replicas: 0
  selector:
    matchLabels:
      app: nginx-paa
  template:
    metadata:
      labels:
        app: nginx-paa
    spec:
      containers:
      - name: nginx-paa
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      podAntiAffinity:
        preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 100
          podAffinityTerm:
            labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - nginx-paa
            topologyKey: kubernetes.io/hostname
      priorityClassName: high-priority
