k8s-yaml/yaml/depl-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-file
          mountPath: "/etc/nginx/conf.d/default.conf"
          subPath: "default.conf"
        - name: nginx-config-file
          mountPath: "/etc/nginx/nginx.conf"
          subPath: "nginx.conf"
      volumes:
      - name: nginx-config-file
        configMap:
          name: nginx-cfg
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.azure.com/agentpool
                operator: In
                values:
                - aksnp01
