k8s-yaml/yaml/svc-envoy.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: svc-envoy
spec:
  selector:
    app: envoy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3500
      nodePort: 30011
  type: NodePort
